Updated .env FIles

--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 APP_ENV=local
 APP_KEY=base64:3hvmVSk8E+Da1vycM4T5DJD7Khjww9EXjzpqDZ2jZD4=
+APP_NAME="Casual Seduction"
+APP_NAME_ADMIN="Casual Seduction Admin Panel"
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
